--- a/css/base.css
+++ b/css/base.css
@@ -7,6 +7,7 @@ html {
     padding: 0px;
     font-family: "Microsoft YaHei", Helvetica Neue, Tahoma, Arial, "微软雅黑", "宋体", "黑体";
     font-weight: lighter;
+    overflow-x: hidden;
 }
 
 * {
