--- a/css/style.css
+++ b/css/style.css
@@ -1610,7 +1610,7 @@ li.first:hover:after {
     
     /* partner */
     .partner-logo {
-        max-width: 280px
+        max-width: 280px;
     }
 
     .partner-logo img {
