--- a/css/base.css
+++ b/css/base.css
@@ -5,7 +5,7 @@ html {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    font-family: "Microsoft YaHei", Helvetica Neue, Tahoma, Arial, "微软雅黑", "宋体", "黑体";
+    font-family: "Microsoft YaHei", sans-serif, Arial;
     overflow-x: hidden;
 }
 
