--- a/css/base.css
+++ b/css/base.css
@@ -243,7 +243,7 @@ li.first:hover:after {
 
 .footer-floor {
     width: 100%;
-    background: url("../images/footer/footer2.png") center top;
+    background: #1a1917 url("../images/footer/footer2.png") center top;
 }
 
 .footer-top {
