--- a/css/base.css
+++ b/css/base.css
@@ -238,7 +238,8 @@ li.first:hover:after {
 
 .footer-main {
     width: 100%;
-    background: url("../images/footer/footer1.jpg");
+    background: url("../images/footer/footer1.png") center top;
+    box-shadow: 0 -2px 0px #3d3d3d, 0 -3px 5px #353434, 0 -5px 0px #3d3d3d;
 }
 
 .footer-floor {
@@ -267,7 +268,7 @@ li.first:hover:after {
 }
 
 .footer-top .item2 {
-    width: 396px;
+    width: 401px;
     padding: 0 45px 0 25px;
     border-right: 1px solid #323232;
     border-left: 1px solid #1a1a1a;
@@ -309,9 +310,34 @@ li.first:hover:after {
 }
 
 .copyright {
-    line-height: 20px;
-    letter-spacing: 1px;
-    padding: 15px 0 15px;
+    position: relative;
+    line-height: 18px;
+    padding: 15px 0 15px 26px;
+}
+
+.copyright2 {
+    position: relative;
+    padding-left: 26px;
+}
+
+.copyright:before,
+.copyright2:before {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #eb610f;
+}
+
+.copyright:before {
+    left: 3px;
+    top: 20px;
+}
+
+.copyright2:before {
+    left: 3px;
+    top: 5px;
 }
 
 .footer-contact {
@@ -319,7 +345,7 @@ li.first:hover:after {
 }
 
 .footer-contact > p {
-    line-height: 34px;
+    line-height: 31px;
 }
 
 .footer-contact .address {
