--- a/css/base.css
+++ b/css/base.css
@@ -3,11 +3,12 @@ html {
     font-size: 14px;
     background: #fff;
     width: 100%;
-    max-width: 1920px;
-    margin: 0 auto;
+    margin: 0px;
     padding: 0px;
     font-family: "Microsoft YaHei", sans-serif, Arial;
     overflow-x: hidden;
+    max-width: 1920px;
+    margin: 0 auto;
 }
 
 * {
@@ -74,6 +75,10 @@ textarea:focus {
 
 .clearfix:after {
     clear: both;
+}
+
+.hide {
+    display: none;
 }
 
 /* header */
